crates/sourcepawn_lsp/tests/text_document/hover/snapshots/main__text_document__hover__enums__enum_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/hover/enums.rs
assertion_line: 21
expression: "hover(r#\"\n%! main.sp\n/**\n * The Foo enum.\n */\n#pragma deprecated Use Bar instead.\nenum Foo {}\n      |\n      ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\nenum Foo\n```\n\n---\n\n**DEPRECATED**: Use Bar instead. The Foo enum."
  },
  "range": {
    "start": {
      "line": 4,
      "character": 5
    },
    "end": {
      "line": 4,
      "character": 8
    }
  },
  "actions": []
}
