crates/sourcepawn_lsp/tests/text_document/hover/snapshots/main__text_document__hover__enums__enum_4.snap
---
source: crates/sourcepawn_lsp/tests/text_document/hover/enums.rs
assertion_line: 51
expression: "hover(r#\"\n%! main.sp\nenum Foo {\n    #pragma deprecated Use Foo2 instead.\n    Foo1, /** The Foo1 variant. */\n      |\n      ^\n}\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\nFoo::Foo1\n```\n\n---\n\n**DEPRECATED**: Use Foo2 instead.\n\nThe Foo1 variant."
  },
  "range": {
    "start": {
      "line": 2,
      "character": 4
    },
    "end": {
      "line": 2,
      "character": 8
    }
  },
  "actions": [
    {
      "title": "Go to ",
      "commands": [
        {
          "title": "Foo",
          "command": "sourcepawn-vscode.gotoLocation",
          "arguments": [
            {
              "uri": "file:///main.sp",
              "range": {
                "start": {
                  "line": 0,
                  "character": 5
                },
                "end": {
                  "line": 0,
                  "character": 8
                }
              }
            }
          ],
          "tooltip": ""
        }
      ]
    }
  ]
}
